[package]
name = "rust-commandline-example"
version = "0.1.0"
authors = ["Brendan Nolan <bnolan23@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
client = { path = "/home/brendan/rust/rust_client_server_framework/client" }
connection_utils = { path = "/home/brendan/rust/rust_client_server_framework/connection_utils" }
crossterm = { version = "0.19", features = [ "serde" ] }
futures = "0.3.24"
rand = { version = "0.7.3", default-features = false, features = ["std"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { path = "/home/brendan/rust/rust_client_server_framework/server" }
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.21.0", default-features = false, features = ['crossterm', 'serde'] }
